# -1-

./: 4thlab1problem.cpp  4thlab2problem.cpp  4thlab3problem.cpp  firstlab.cpp  secondlab.cpp  thirdlab.cpp
10thlab/: main.cpp
11thlab/: 1problem.cpp  3problem.cpp
1stlab/: 1problem.cpp
2ndlab/: 1problem.cpp
3rdlab/: 1problem.cpp
4thlab/: 1problem.cpp  2problem.cpp  3problem.cpp
6thlab/: 1problem.cpp  2problem.cpp
7thlab/: 1problem.cpp  2problem.cpp  3problem.cpp  4problem-repaired.cpp  4problem.cpp
8thlab/: 1problem.cpp  2problem.cpp  3problem.cpp
9thlab/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  matrixio.cpp  my_class.hpp  proceduring.cpp
