cmake_minimum_required (VERSION 3.5)
enable_language(CXX)
project(9thlab)
set(SOURCE_EXE "main")
set(SOURCE_LIB_IO "matrixio")
set(SOURCE_LIB_P "proceduring")
add_library(io ${SOURCE_LIB_IO})
add_library(proceduring ${SOURCE_LIB_P})
add_executable(main ${SOURCE_EXE})
target_link_libraries(main io proceduring)